platform/apps/harbor/network/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: harbor-nginx
  namespace: harbor
spec:
  host: harbor-nginx.harbor.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: harbor-redis
  namespace: harbor
spec:
  host: harbor-redis.harbor.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: harbor-database
  namespace: harbor
spec:
  host: harbor-database.harbor.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hetzner-s3
  namespace: harbor
spec:
  host: fsn1.your-objectstorage.com
  trafficPolicy:
    tls:
      mode: SIMPLE
      sni: fsn1.your-objectstorage.com
