platform/apps/harbor/network/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: hetzner-objectstorage
  namespace: harbor
spec:
  hosts:
    - fsn1.your-objectstorage.com
  ports:
    - number: 443
      name: tls
      protocol: TLS
  location: MESH_EXTERNAL
  resolution: DNS
