platform/apps/harbor/network/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor
  namespace: istio-ingress
spec:
  hosts:
    - registry.asnk.io
  gateways:
    - istio-ingress/harbor-gateway
  http:
    - match:
        - uri:
            prefix: /.well-known/acme-challenge/
          port: 80
      route:
        - destination:
            host: harbor-nginx.harbor.svc.cluster.local
            port:
              number: 80

    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 308

    - match:
        - port: 443
      route:
        - destination:
            host: harbor-nginx.harbor.svc.cluster.local
            port:
              number: 80
